[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Placeable.gd" type="Script" id=1]
[ext_resource path="res://Art/Placeables/Sofa.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 113.752, 35.162 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 124.25, 38.4786 )

[node name="Sofa" type="StaticBody2D" groups=[
"Interactable",
]]
script = ExtResource( 1 )
interact = [ "move", "delete" ]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -109.093 )
texture = ExtResource( 2 )
offset = Vector2( -0.698349, -20.4878 )

[node name="Col" type="CollisionShape2D" parent="."]
position = Vector2( -1.948, -6.37672 )
shape = SubResource( 1 )

[node name="Interactive" type="Area2D" parent="."]

[node name="Col" type="CollisionShape2D" parent="Interactive"]
shape = SubResource( 2 )
[connection signal="body_entered" from="Interactive" to="." method="_on_Interactive_body_entered"]
[connection signal="body_exited" from="Interactive" to="." method="_on_Interactive_body_exited"]
